# aws-priv-actions

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aws_priv_actions/: cli.py
tests/: test_cli.py
