[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-priv-actions"
version = "0.1.0"
description = "CLI for privileged actions on AWS member accounts"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "boto3>=1.34.0",
    "rich>=13.0.0",
]

[project.scripts]
aws-priv-actions = "aws_priv_actions.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aws_priv_actions"]

[tool.uv]
python = "3.11" 